--- a/src/scss/partials/sections/_header-full-height.scss
+++ b/src/scss/partials/sections/_header-full-height.scss
@@ -136,6 +136,7 @@
       left: initial;
       top: initial;
       margin-top: 8px;
+      margin-left: -15px;
       z-index: 2;
 
       li {
