--- a/src/scss/partials/templates/_product.scss
+++ b/src/scss/partials/templates/_product.scss
@@ -86,6 +86,7 @@
             display: inline;
             // width: auto;
             width: 100%;
+            -webkit-appearance: none;
             -moz-text-align-last:center;
             text-align-last:center;
           }
